# options-analysis-suite-python

./: .gitignore  CHANGELOG.md  LICENSE  MAINTAINING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: gen_models.py
src/oas/: __init__.py  _manifest.py  _transport.py  calibration.py  client.py  credentials.py  errors.py
src/oas/_generated/: models.py
tests/: conftest.py  test_calibration.py  test_client_live.py  test_client_mocked.py  test_drift.py  test_fixture_freshness.py  test_metadata.py  test_methods_mocked.py
tests/fixtures/: openapi.snapshot.json
