[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "options-analysis-suite"
version = "0.1.0a3"
description = "Python SDK for the Options Analysis Suite API: 17 pricing models, auto-calibration, GEX/DEX exposure, IV surfaces, and pre-computed market data."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Options Analysis Suite" }]
keywords = [
  "options", "trading", "quant", "greeks", "exposure", "calibration",
  "heston", "sabr", "variance-gamma", "jump-diffusion", "local-volatility",
  "black-scholes", "implied-volatility", "options-pricing", "byok",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Investment",
]
# Note: no Typing :: Typed classifier and no `py.typed` marker until the
# datamodel-codegen output is mypy-clean. The hand-written surface
# (client.py, errors.py, credentials.py, _transport.py) is fully typed and
# passes `mypy --strict`; the generated module is excluded.
dependencies = [
  "httpx>=0.27,<1.0",
  "pydantic>=2.5,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "respx>=0.20",
  "ruff>=0.5",
  "mypy>=1.8",
  "twine>=5.0",
]
codegen = [
  "datamodel-code-generator>=0.26",
]

[project.urls]
Homepage = "https://optionsanalysissuite.com"
Documentation = "https://data.optionsanalysissuite.com/docs"
Pricing = "https://optionsanalysissuite.com/pricing"
"SDK Reference" = "https://optionsanalysissuite.com/developers/python"

[tool.hatch.build.targets.wheel]
packages = ["src/oas"]

[tool.hatch.build.targets.sdist]
include = [
  "src/oas",
  "tests",
  "scripts",
  "README.md",
  "CHANGELOG.md",
  "LICENSE",
  "Makefile",
  "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"
# Generated models are not hand-written; lint them only via the codegen script's
# post-processing — not by hand-editing the file.
extend-exclude = ["src/oas/_generated"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]

[tool.ruff.lint.per-file-ignores]
# Pricing-convention argument names: S=spot, K=strike, etc. Allowed everywhere
# the math actually demands them; renaming to lowercase would obscure the
# Black-Scholes correspondence.
"src/oas/client.py" = ["N803"]
"src/oas/calibration.py" = ["N803"]
# _manifest.py is a hand-aligned table mapping operationIds → Endpoint(...)
# entries. The visual alignment is more valuable than a 100-char wrap.
"src/oas/_manifest.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "live: integration tests that hit the deployed API (require OAS_API_KEY env var)",
]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/oas"]
# datamodel-codegen output uses old-style `confloat(...)` / `constr(...)` annotations
# that mypy doesn't accept as type expressions even though Pydantic handles them at
# runtime. The generated file is mechanically produced, so don't gate dev on it.
exclude = ["src/oas/_generated/.*"]
